Add websocket code test